--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <footer class="footer text-center">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 mb-2 mb-lg-0">
+                    <div class="col-lg-4 mb-2 mb-lg-0 pb-5">
                         <h4 class="text-uppercase mb-4">EM BUSCA DE UM DESAFIO?</h4>
                         <p class="lead mb-0">
                             <a href="#" class="btn btn-primary btn-lg disabled" role="button" aria-disabled="true">EM BREVE</a>
