--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
                 <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Patrocinadores</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Apoio</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -62,25 +62,25 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto">
-                            <img class="img-fluid" src="assets/img/partners/LN-performance.png" alt="LN Performance" />
+                        <div class="portfolio-item mx-auto pt-5" id="prefeitura">
+                            <img class="img-fluid" src="assets/img/partners/prefeitura-ubatuba.png" alt="Prefeitura Ubatuba" />
                         </div>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto pt-4">
-                            <img class="img-fluid" src="assets/img/partners/opiniao.jpeg" alt="Opinião Calçados" />
+                            <img class="img-fluid" src="assets/img/partners/pistache2.png" alt="Pistache" />
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
-                            <img class="img-fluid" src="assets/img/partners/LN-performance.png" alt="LN Performance" />
+                            <img class="img-fluid" src="assets/img/partners/fisio-funcional.png" alt="Fisio Funcional" />
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto pt-4">
-                            <img class="img-fluid" src="assets/img/partners/opiniao.jpeg" alt="Opinião Calçados" />
+                            <img class="img-fluid" src="assets/img/partners/sorridents.png" alt="Sorridents" />
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">CONTATE-NOS</h4>
                         <p class="lead mb-0">
-                            jerussa.psi.uba@gmail.com<br />
+                            institutovalderilreis@gmail.com<br />
                             (12) 98262.9352
                         </p>
                     </div>
