--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto pt-4">
+                            <img class="img-fluid" src="assets/img/partners/jundu.jpeg" alt="Jundu" />
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Footer-->
