Add more partners

--- a/index.html
+++ b/index.html
@@ -54,12 +54,16 @@
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
-                            <img class="img-fluid" src="assets/img/partners/LN-performance.png" alt="LN Performance" />
+                            <a href="https://www.instagram.com/lnperformance" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/LN-performance.png" alt="LN Performance" />
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto pt-4">
-                            <img class="img-fluid" src="assets/img/partners/opiniao.jpeg" alt="Opinião Calçados" />
+                            <a href="https://www.instagram.com/opiniaocalcados" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/opiniao.jpeg" alt="Opinião Calçados" />
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -71,24 +75,46 @@
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto pt-4">
-                            <img class="img-fluid" src="assets/img/partners/pistache2.png" alt="Pistache" />
+                            <a href="http://pistachegelateria.com.br" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/pistache2.png" alt="Pistache" />
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
-                            <img class="img-fluid" src="assets/img/partners/fisio-funcional.png" alt="Fisio Funcional" />
+                            <a href="https://fisioefuncional.com.br" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/fisio-funcional.png" alt="Fisio Funcional" />
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto pt-4">
-                            <img class="img-fluid" src="assets/img/partners/sorridents.png" alt="Sorridents" />
+                            <a href="https://sorridentsubatuba.com.br" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/sorridents.png" alt="Sorridents" />
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto pt-4">
-                            <img class="img-fluid" src="assets/img/partners/jundu.jpeg" alt="Jundu" />
+                            <a href="https://instagram.com/casa.padeirinha" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/padeirinha.jpeg" alt="Casa Padeirinha" />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto pt-4">
+                            <a href="https://instagram.com/casa.padeirinha" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/jundu.jpeg" alt="Jundu" />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" id="terra-viva">
+                            <a href="https://www.instagram.com/espacoterraviva" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/terra-viva.jpeg" alt="Terra Viva" />
+                            </a>
                         </div>
                     </div>
                 </div>
