--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto pt-4">
-                            <a href="https://instagram.com/casa.padeirinha" target="_blank">
+                            <a href="https://instagram.com/jundupraiabar" target="_blank">
                                 <img class="img-fluid" src="assets/img/partners/jundu.jpeg" alt="Jundu" />
                             </a>
                         </div>
