--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; 2025</small></div>
+            <div class="container"><small>Copyright &copy; 2025 - Criado por <a target="_blank" href="https://www.linkedin.com/in/leticiaverta/">Leticia Verta</a></small></div>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
