Add more partners

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
-                            <a href="https://www.instagram.com/lnperformance" target="_blank">
+                            <a href="https://instagram.com/lnperformance" target="_blank">
                                 <img class="img-fluid" src="assets/img/partners/LN-performance.png" alt="LN Performance" />
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto pt-4">
-                            <a href="https://www.instagram.com/opiniaocalcados" target="_blank">
+                            <a href="https://instagram.com/opiniaocalcados" target="_blank">
                                 <img class="img-fluid" src="assets/img/partners/opiniao.jpeg" alt="Opinião Calçados" />
                             </a>
                         </div>
@@ -121,8 +121,31 @@
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" id="terra-viva">
-                            <a href="https://www.instagram.com/espacoterraviva" target="_blank">
+                            <a href="https://instagram.com/espacoterraviva" target="_blank">
                                 <img class="img-fluid" src="assets/img/partners/terra-viva.jpeg" alt="Terra Viva" />
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto pt-5">
+                            <a href="https://instagram.com/ubatubatraininggym/" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/utg.png" alt="UTG - Academia Ubatuba" />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto">
+                            <a href="https://instagram.com/nutrimayramello" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/mayra-nutri.jpeg" alt="Mayra Mello - Nutrição Integrativa" />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto">
+                            <a href="https://instagram.com/sublimae_presentes" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/sublimae.jpeg" alt="Sublimaê - Presentes Personalizados" />
                             </a>
                         </div>
                     </div>
