--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 
                 <p class="pt-5">
                     Esta é uma iniciativa para fortalecer a prática de esporte com cuidado, responsabilidade e respeito de forma colaborativa. <br/><br/>
-                    Em nosso primeiro evento de nado em águas abertas para a ilha Prumirim em Ubatuba/SP comemoraramos a fundação do <b>INSTITUTO VALDERIL REIS</b> de apoio ao atleta amador, experiênciamos um desafio incrível e emocionante. Confira nosso vídeo abaixo (se puder, ative o som do mesmo)!<br /><br /><br />
-                    <b>FIQUE ATENTO E PARTICIPE DOS PRÓXIMOS CONOSCO!</b><br /><br />
+                    Em nosso primeiro evento de nado em águas abertas para a ilha Prumirim em Ubatuba/SP comemoraramos a fundação do <b>INSTITUTO VALDERIL REIS</b> de apoio ao atleta amador, experiênciamos um desafio incrível e emocionante. Confira como foi nosso primeiro desafio (se puder, ative o som do vídeo)!<br /><br />
                 </p>
                 <div id="relative">
                     <video controls class="mt-3" autoplay muted>
@@ -57,32 +56,81 @@
                         Your browser does not support the video tag.
                     </video>
 
-                    <!-- Newsletter 1 - Bootstrap Brain Component -->
-                    <section class="py-3 py-md-5 py-xl-10 mt-3" id="signup">
-                        <div class="container">
-                            <!--div class="row justify-content-md-center">
-                                <div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
-                                    <h2 class="display-4 mb-4 mb-md-5 mb-xxl-6 text-center">EM BUSCA DE UM DESAFIO?</h2>
-                                    <p>INFORME SEU EMAIL E SEJA O PRIMEIRO A SABER DA PRÓXIMA EDIÇÃO</p>
-                                </div>
+                    <div id="images" class="translate-middle-y translate-middle-x">
+                        <!-- Gallery -->
+                        <div class="row">
+                            <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                                <img
+                                        src="assets/img/Foge pra Ilha 02 (78).jpg"
+                                        class="w-100 shadow-1-strong rounded mb-4"
+                                        alt="Boat on Calm Water"
+                                />
+
+                                <img
+                                        src="assets/img/Foge pra Ilha 02 (5).jpg"
+                                        class="w-100 shadow-1-strong rounded mb-4"
+                                        alt="Wintry Mountain Landscape"
+                                />
                             </div>
-                            <div class="row justify-content-md-center t-4">
-                                <div class="col-12 col-md-10 col-lg-9 col-xl-8 col-xxl-7">
-                                    <form class="row gy-3 gy-lg-0 gx-lg-2 justify-content-center">
-                                        <div class="col-12 col-lg-8">
-                                            <label for="email-newsletter-component" class="visually-hidden">Email Address</label>
-                                            <input type="email" class="form-control bsb-form-control-3xl" id="email-newsletter-component" value="" placeholder="Email" aria-label="email-newsletter-component" aria-describedby="email-newsletter-help" required>
-                                            <div id="email-newsletter-help" class="form-text text-center text-lg-start">Nós nunca vamos compartilhar seu email com ninguém.</div>
-                                        </div>
-                                        <div class="col-12 col-lg-3 text-center text-lg-start">
-                                            <button type="submit" class="btn btn-primary bsb-btn-3xl">VAMOS!</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div-->
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe9n9pz_QS84xwKntO2qG0k3UByMId8xbRV6x20PuB5ExKuYA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+
+                            <div class="col-lg-4 mb-4 mb-lg-0">
+                                <img
+                                        src="assets/img/Foge pra Ilha 02 (14).jpg"
+                                        class="w-100 shadow-1-strong rounded mb-4"
+                                        alt="Mountains in the Clouds"
+                                />
+
+                                <img
+                                        src="assets/img/Foge pra Ilha 02 (23).jpg"
+                                        class="w-100 shadow-1-strong rounded mb-4"
+                                        alt="Boat on Calm Water"
+                                />
+                            </div>
+
+                            <div class="col-lg-4 mb-4 mb-lg-0">
+                                <img
+                                        src="assets/img/DSC_1316.jpg"
+                                        class="w-100 shadow-1-strong rounded mb-4"
+                                        alt="Waves at Sea"
+                                />
+
+                                <img
+                                        src="assets/img/DSC_1249.jpg"
+                                        class="w-100 shadow-1-strong rounded mb-4"
+                                        alt="Yosemite National Park"
+                                />
+                            </div>
                         </div>
-                    </section>
+                        <!-- Gallery -->
+
+                        <a class="btn btn-light float-right" href="https://photos.app.goo.gl/GwCxsrS7Cww7rCuRA" target="_blank">Clique aqui para ver mais fotos</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Newsletter 1 - Bootstrap Brain Component -->
+        <section class="page-section py-3 py-md-5 py-xl-10 bg-dark mt-4 text-white" id="signup">
+            <div class="container">
+                <div class="row justify-content-md-center">
+                    <div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
+                        <h2 class="display-4 mb-4 mb-md-5 mb-xxl-6 text-center">EM BUSCA DE UM DESAFIO?</h2>
+                        <p>INFORME SEU EMAIL E SEJA O PRIMEIRO A SABER DA PRÓXIMA EDIÇÃO</p>
+                    </div>
+                </div>
+                <div class="row justify-content-md-center t-4">
+                    <div class="col-12 col-md-10 col-lg-9 col-xl-8 col-xxl-7">
+                        <form class="row gy-3 gy-lg-0 gx-lg-2 justify-content-center">
+                            <div class="col-12 col-lg-8">
+                                <label for="email-newsletter-component" class="visually-hidden">Email Address</label>
+                                <a href="https://forms.gle/6ke5iV75h3bH6KcE7" target="_blank"><input type="email" class="form-control bsb-form-control-3xl" id="email-newsletter-component" value="" placeholder="Email" aria-label="email-newsletter-component" aria-describedby="email-newsletter-help" required></a>
+                                <div id="email-newsletter-help" class="form-text text-center text-lg-start">Nós nunca vamos compartilhar seu email com ninguém.</div>
+                            </div>
+                            <div class="col-12 col-lg-3 text-center text-lg-start">
+                                <a type="submit" class="btn btn-primary bsb-btn-3xl" target="_blank" href="https://forms.gle/6ke5iV75h3bH6KcE7">VAMOS!</a>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
