--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta name="author" content="" />
         <title>Foge pra ilha, mas volta pra casa - Ubatuba, Brasil</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon2.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -29,9 +29,9 @@
         <section class="page-section bg-primary text-white mb-0" id="about">
             <div class="container">
                 <div class="row">
-                    <h3 id="date" class="text-light mt-sm-5">PRÓXIMA PRIMAVERA</h3>
+                    <h3 id="date" class="text-light mt-sm-5">Domingo, 1º de fevereiro de 2026.</h3>
                 </div>
-                <h2 class="page-section-heading text-uppercase text-white">MAIS UM DESAFIO PARA OS AMANTES DO NADO</h2>
+                <h2 class="page-section-heading text-uppercase text-white">NOVO DESAFIO PARA OS AMANTES DA NATAÇÃO</h2>
                 <div class="row">
                     <h3>E DE UBATUBA</h3>
                 </div>
@@ -39,12 +39,37 @@
         </section>
         <header class="masthead text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <img class="masthead-avatar mb-5" src="assets/img/foge-pra-ilha-mas-volta-pra-casa-logo.png" alt="..." />
+                <img class="masthead-avatar mb-5" src="assets/img/foge-preto.png" alt="..." />
             </div>
         </header>
-        <section class="page-section bg-secondary text-white mb-0 pt-5 pb-4" id="primeira-edicao">
+        <!-- Newsletter 1 - Bootstrap Brain Component -->
+        <section class="page-section py-3 py-md-5 py-xl-10 bg-white mt-4 text-dark" id="signup">
+            <div class="container">
+                <div class="row justify-content-md-center">
+                    <div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
+                        <a href="https://forms.gle/TCo95KujSXfPh3cy8" target="_blank" class="btn btn-lg display-4 mb-4 mb-md-5 mb-xxl-6 text-center d-block" style="background-color: #009B4D; color: #fff;">INSCREVA-SE AGORA!</a>
+                        <!--p>INFORME SEU EMAIL E SEJA O PRIMEIRO A SABER DA PRÓXIMA EDIÇÃO</p>
+                    </div>
+                </div>
+                <!--div class="row justify-content-md-center t-4">
+                    <div class="col-12 col-md-10 col-lg-9 col-xl-8 col-xxl-7">
+                        <form class="row gy-3 gy-lg-0 gx-lg-2 justify-content-center">
+                            <div class="col-12 col-lg-8">
+                                <label for="email-newsletter-component" class="visually-hidden">Email Address</label>
+                                <a href="https://forms.gle/6ke5iV75h3bH6KcE7" target="_blank"><input type="email" class="form-control bsb-form-control-3xl" id="email-newsletter-component" value="" placeholder="Email" aria-label="email-newsletter-component" aria-describedby="email-newsletter-help" required></a>
+                                <div id="email-newsletter-help" class="form-text text-center text-lg-start">Nós nunca vamos compartilhar seu email com ninguém.</div>
+                            </div>
+                            <div class="col-12 col-lg-3 text-center text-lg-start">
+                                <a type="submit" class="btn btn-primary bsb-btn-3xl" target="_blank" href="https://forms.gle/6ke5iV75h3bH6KcE7">VAMOS!</a>
+                            </div>
+                        </form>
+                    </div>
+                </div-->
+            </div>
+        </section>
+        <section class="page-section bg-secondary mb-0 pt-5 pb-4" id="primeira-edicao" style="color: #205A28;">
             <div class="container pb-3">
-                <h2 class="page-section-heading text-uppercase text-white">NOSSA PRIMEIRA EDIÇÃO ❤️</h2>
+                <h2 class="page-section-heading text-uppercase" style="color: #205A28;">NOSSO DESAFIO ANTERIOR❤️</h2>
 
                 <p class="pt-5">
                     Esta é uma iniciativa para fortalecer a prática de esporte com cuidado, responsabilidade e respeito de forma colaborativa. <br/><br/>
@@ -109,31 +134,6 @@
             </div>
         </section>
 
-        <!-- Newsletter 1 - Bootstrap Brain Component -->
-        <section class="page-section py-3 py-md-5 py-xl-10 bg-dark mt-4 text-white" id="signup">
-            <div class="container">
-                <div class="row justify-content-md-center">
-                    <div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
-                        <h2 class="display-4 mb-4 mb-md-5 mb-xxl-6 text-center">EM BUSCA DE UM DESAFIO?</h2>
-                        <p>INFORME SEU EMAIL E SEJA O PRIMEIRO A SABER DA PRÓXIMA EDIÇÃO</p>
-                    </div>
-                </div>
-                <div class="row justify-content-md-center t-4">
-                    <div class="col-12 col-md-10 col-lg-9 col-xl-8 col-xxl-7">
-                        <form class="row gy-3 gy-lg-0 gx-lg-2 justify-content-center">
-                            <div class="col-12 col-lg-8">
-                                <label for="email-newsletter-component" class="visually-hidden">Email Address</label>
-                                <a href="https://forms.gle/6ke5iV75h3bH6KcE7" target="_blank"><input type="email" class="form-control bsb-form-control-3xl" id="email-newsletter-component" value="" placeholder="Email" aria-label="email-newsletter-component" aria-describedby="email-newsletter-help" required></a>
-                                <div id="email-newsletter-help" class="form-text text-center text-lg-start">Nós nunca vamos compartilhar seu email com ninguém.</div>
-                            </div>
-                            <div class="col-12 col-lg-3 text-center text-lg-start">
-                                <a type="submit" class="btn btn-primary bsb-btn-3xl" target="_blank" href="https://forms.gle/6ke5iV75h3bH6KcE7">VAMOS!</a>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
         <!--section class="page-section bg-secondary text-white mb-0" id="presentation">
             <div class="container container text-bg-secondary pt-3 pb-3">
                 <h2 class="page-section-heading text-uppercase text-white">EM BUSCA DE UM DESAFIO?<br />EM BREVE NOVA DATA.</h2>
@@ -147,7 +147,7 @@
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
                 <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Apoio</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-primary mb-0">Apoio</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -163,49 +163,19 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto pt-4">
-                            <a href="https://instagram.com/opiniaocalcados" target="_blank">
-                                <img class="img-fluid" src="assets/img/partners/opiniao.jpeg" alt="Opinião Calçados" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto pt-5" id="prefeitura">
                             <img class="img-fluid" src="assets/img/partners/prefeitura-ubatuba.png" alt="Prefeitura Ubatuba" />
                         </div>
                     </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto pt-4">
+                    <div class="col-md-6 col-lg-4 mb-5 d-flex align-items-center">
+                        <div class="portfolio-item mx-auto">
                             <a href="http://pistachegelateria.com.br" target="_blank">
                                 <img class="img-fluid" src="assets/img/partners/pistache2.png" alt="Pistache" />
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto">
-                            <a href="https://fisioefuncional.com.br" target="_blank">
-                                <img class="img-fluid" src="assets/img/partners/fisio-funcional.png" alt="Fisio Funcional" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto pt-4">
-                            <a href="https://sorridentsubatuba.com.br" target="_blank">
-                                <img class="img-fluid" src="assets/img/partners/sorridents.png" alt="Sorridents" />
-                            </a>
-                        </div>
-                    </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto pt-4">
-                            <a href="https://instagram.com/casa.padeirinha" target="_blank">
-                                <img class="img-fluid" src="assets/img/partners/padeirinha.jpeg" alt="Casa Padeirinha" />
-                            </a>
-                        </div>
-                    </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto pt-4">
                             <a href="https://instagram.com/jundupraiabar" target="_blank">
@@ -214,32 +184,25 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" id="terra-viva">
-                            <a href="https://instagram.com/espacoterraviva" target="_blank">
-                                <img class="img-fluid" src="assets/img/partners/terra-viva.jpeg" alt="Terra Viva" />
+                        <div class="portfolio-item mx-auto">
+                            <a href="https://instagram.com/sublimae_presentes" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/sublimae.jpeg" alt="Sublimaê - Presentes Personalizados" />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto">
+                            <a href="https://www.instagram.com/trilhanortebikestore/" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/trilha-norte.jpg" alt="Trilha Norte Bike Store" />
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto pt-5">
-                            <a href="https://instagram.com/ubatubatraininggym/" target="_blank">
-                                <img class="img-fluid" src="assets/img/partners/utg.png" alt="UTG - Academia Ubatuba" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto">
-                            <a href="https://instagram.com/nutrimayramello" target="_blank">
-                                <img class="img-fluid" src="assets/img/partners/mayra-nutri.jpeg" alt="Mayra Mello - Nutrição Integrativa" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto">
-                            <a href="https://instagram.com/sublimae_presentes" target="_blank">
-                                <img class="img-fluid" src="assets/img/partners/sublimae.jpeg" alt="Sublimaê - Presentes Personalizados" />
+                        <div class="portfolio-item mx-auto pt-4">
+                            <a href="https://www.instagram.com/agencia.confectorfilmes/" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/confector.jpg" alt="Agência Confector Filmes" />
                             </a>
                         </div>
                     </div>
@@ -269,8 +232,8 @@
             </div>
         </footer>
         <!-- Copyright Section-->
-        <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; 2025 - Criado por <a target="_blank" href="https://www.linkedin.com/in/leticiaverta/">Leticia Verta</a></small></div>
+        <div class="copyright py-4 text-center" style="color: #205A28;">
+            <div class="container"><small>Copyright &copy; 2026 - Criado por <a target="_blank" href="https://www.linkedin.com/in/leticiaverta/" style="color: #205A28;">Leticia Verta</a></small></div>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
