Add delta partner

--- a/index.html
+++ b/index.html
@@ -207,6 +207,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto pt-4">
+                            <a href="http://api.whatsapp.com/send?phone=+551238333000&text=oi,gostaria+de+servicos+contabeis+de+vcs" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/delta-contabilidade.png" alt="Delta Contabilidade" />
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Footer-->
