--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/styles.css?v=20260118" rel="stylesheet" />
     </head>
     <body id="page-top">
         <section class="page-section bg-primary text-white mb-0" id="about">
@@ -206,8 +206,6 @@
                             </a>
                         </div>
                     </div>
-                </div>
-                <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto pt-4">
                             <a href="http://api.whatsapp.com/send?phone=+551238333000&text=oi,gostaria+de+servicos+contabeis+de+vcs" target="_blank">
