Add more partners

--- a/index.html
+++ b/index.html
@@ -177,8 +177,10 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto pt-5" id="prefeitura">
-                            <img class="img-fluid" src="assets/img/partners/prefeitura-ubatuba.png" alt="Prefeitura Ubatuba" />
+                        <div class="portfolio-item mx-auto">
+                            <a href="https://www.instagram.com/cdecaneca/" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/caneca.png" alt="C de Caneca - Cinema e Arte.. Tudo que cabe na Caneca ou combina com café.." />
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5 d-flex align-items-center">
@@ -214,6 +216,11 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto pt-5" id="prefeitura">
+                            <img class="img-fluid" src="assets/img/partners/prefeitura-ubatuba.png" alt="Prefeitura Ubatuba" />
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto pt-4">
                             <a href="https://www.instagram.com/agencia.confectorfilmes/" target="_blank">
                                 <img class="img-fluid" src="assets/img/partners/confector.jpg" alt="Agência Confector Filmes" />
@@ -224,6 +231,15 @@
                         <div class="portfolio-item mx-auto pt-4">
                             <a href="http://api.whatsapp.com/send?phone=+551238333000&text=oi,gostaria+de+servicos+contabeis+de+vcs" target="_blank">
                                 <img class="img-fluid" src="assets/img/partners/delta-contabilidade.png" alt="Delta Contabilidade" />
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto">
+                            <a href="https://fisioefuncional.com.br" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/fisio-funcional.png" alt="Fisio Funcional" />
                             </a>
                         </div>
                     </div>
