--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
                             <a href="https://www.instagram.com/trilhanortebikestore/" target="_blank">
-                                <img class="img-fluid" src="assets/img/partners/trilha-norte.jpg" alt="Trilha Norte Bike Store" />
+                                <img class="img-fluid" src="assets/img/partners/trilha-norte.jpeg" alt="Trilha Norte Bike Store" />
                             </a>
                         </div>
                     </div>
@@ -236,10 +236,17 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="col-md-6 col-lg-4 mb-5 d-flex align-items-center">
                         <div class="portfolio-item mx-auto">
                             <a href="https://fisioefuncional.com.br" target="_blank">
                                 <img class="img-fluid" src="assets/img/partners/fisio-funcional.png" alt="Fisio Funcional" />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto">
+                            <a href="https://www.instagram.com/adilson.soares1/" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/adilson.jpeg" alt="Adilson Soares - Asessoria Esportiva" />
                             </a>
                         </div>
                     </div>
