--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="row justify-content-md-center">
                     <div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
-                        <a href="https://forms.gle/TCo95KujSXfPh3cy8" target="_blank" class="btn btn-lg display-4 mb-4 mb-md-5 mb-xxl-6 text-center d-block" style="background-color: #009B4D; color: #fff;">INSCREVA-SE AGORA!</a>
+                        <a href="#" disabled="disabled"target="_blank" class="btn btn-lg display-4 mb-4 mb-md-5 mb-xxl-6 text-center d-block" style="background-color: #009B4D; color: #fff;">INSCRIÇÕES ESGOTADAS!</a>
                         <!--p>INFORME SEU EMAIL E SEJA O PRIMEIRO A SABER DA PRÓXIMA EDIÇÃO</p>
                     </div>
                 </div>
