--- a/index.html
+++ b/index.html
@@ -250,6 +250,13 @@
                             </a>
                         </div>
                     </div>
+                    <div class="col-md-6 col-lg-4 mb-5 d-flex align-items-center">
+                        <div class="portfolio-item mx-auto">
+                            <a href="https://www.instagram.com/fitcampubatuba/" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/fitcamp.jpeg" alt="Fisio Funcional" />
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
