Add more partners

--- a/index.html
+++ b/index.html
@@ -258,6 +258,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-4 mb-5 d-flex align-items-center">
+                        <div class="portfolio-item mx-auto">
+                            <a href="https://espacoemergente.com.br/" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/espaco-emergente-1.png" alt="Espaço Emergente" />
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Footer-->
