--- a/index.html
+++ b/index.html
@@ -261,8 +261,15 @@
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-4 mb-5 d-flex align-items-center">
                         <div class="portfolio-item mx-auto">
-                            <a href="https://espacoemergente.com.br/" target="_blank">
+                            <a href="https://b2egroup.com.br/" target="_blank">
                                 <img class="img-fluid" src="assets/img/partners/espaco-emergente-1.png" alt="Espaço Emergente" />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-5 d-flex align-items-center">
+                        <div class="portfolio-item mx-auto">
+                            <a href="https://espacoemergente.com.br/" target="_blank">
+                                <img class="img-fluid" src="assets/img/partners/b2e-group.jpeg" alt="B2E Group - Motor de crédito e antifraude" />
                             </a>
                         </div>
                     </div>
